# qml-module-cutiewlc

./: CMakeLists.txt  README.md
debian/: control
src/: cutieappthumbnail.cpp  cutieappthumbnail.h  plugin.cpp  plugin.h  qmldir
src/extensions/: cutie-shell.cpp  cutie-shell.h
